# crossborder-ops-data-hub

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  auth.py  main.py  prefect.yaml  pyproject.toml  requirements.txt  skills-lock.json
.impeccable/: design.json
ai_tools/: __init__.py  operations_read.py
analytics/: __init__.py  profit_alerts.py
core/: audit_context.py  base_client.py  config.py  crypto.py  db.py  domain.py  redact.py  retry.py  tenancy.py  timezone.py
deploy/: deploy.sh  nginx.conf  notify-failure.sh
docs/: audit-compliance.md  board-data-backlog.md  board-layout.md  business-rules.md  data-hub-mcp.md  feishu-bot-onboarding.md  mabang-erp-api-full.json  mabang-erp-api.md  mvp-api.md  openclaw-setup.md  ops-runbook.md  plan-gmv-max-marketing-api.md  proactive-push-ops.md  production-deployment.md  ssh-latency-troubleshooting.md  test-server-deployment.md  tiktok-shop-openapi-index.json  tiktok-shop-openapi-reference.md
flows/: _shop_discovery.py  aggregate_profit.py  anchor_audit_chain.py  backfill_settled_profit.py  network.py  push_replenishment.py  refresh_tokens.py  scan_fulfillment_alerts.py  sync_ad_spend.py  sync_exchange_rate.py  sync_fulfillments.py  sync_gmv_max_spend.py  sync_inventory.py  sync_mabang_costs.py  sync_orders.py  sync_sku_variants.py  sync_unsettled_fees.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
models/: base_models.py
openclaw-docs/: AGENTS.md  SOUL.md
openclaw-skills/: README.md
plan/: 04_metrics_alerts_ai_layer.md  06_tts_order_sync_gmv.md  08b_feishu_menu_webhook.md  09_multi_tenant_isolation.md  10_ops_known_issues.md  11_self_serve_report_subscription.md  12_roi_roas_alert.md  (+9 more)
(+313 files in other folders)
